--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,63 +3,63 @@
 @tailwind utilities;
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 html {
-  margin: 0;
-  padding: 0;
-  /* overflow-x: hidden; */
-  scroll-behavior: smooth !important;
-  --scroll-behavior: smooth !important;
+    margin: 0;
+    padding: 0;
+    /* overflow-x: hidden; */
+    scroll-behavior: smooth !important;
+    --scroll-behavior: smooth !important;
 }
 body {
-  scroll-behavior: smooth;
-  background-color: #161818;
-  overflow-x: hidden;
-  margin: 0;
-  padding: 0;
-  width: 100%;
+    scroll-behavior: smooth;
+    background-color: #161818;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 .sticky-container {
-  height: 5rem;
-  z-index: 100;
+    height: 5rem;
+    z-index: 100;
 }
 .bggrad1 {
-  width: 105px;
-  height: 105px;
-  border-radius: 100%;
-  background: linear-gradient(180deg, #b7b9b593, #4f4b4bdd, #161616c2);
-  box-shadow: 0px 6px 3.9px 0px rgba(255, 255, 255, 0.53) inset;
-  opacity: 0.9;
-  cursor: pointer;
+    width: 105px;
+    height: 105px;
+    border-radius: 100%;
+    background: linear-gradient(180deg, #b7b9b593, #4f4b4bdd, #161616c2);
+    box-shadow: 0px 6px 3.9px 0px rgba(255, 255, 255, 0.53) inset;
+    opacity: 0.9;
+    cursor: pointer;
 }
 
 @media (max-width: 670px) {
-  .bggrad1 {
-    height: 85px;
-    width: 85px;
-    top: 29.5%;
-    left: 25.21%;
-  }
+    .bggrad1 {
+        height: 85px;
+        width: 85px;
+        top: 29.5%;
+        left: 25.21%;
+    }
 }
 
 @media (max-width: 410px) {
-  .bggrad1 {
-    top: -10%;
-  }
+    .bggrad1 {
+        top: -10%;
+    }
 }
 /* start */
 .nav {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  position: sticky;
-  top: 3vh;
-  cursor: default;
-  background: transparent;
-  z-index: 100;
-  border-radius: 50vh;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position: sticky;
+    top: 3vh;
+    cursor: default;
+    background: transparent;
+    z-index: 100;
+    border-radius: 50vh;
 }
 
 #linker,
@@ -69,464 +69,525 @@ body {
 #link3,
 #greet,
 #downloadResume {
-  z-index: 100;
+    z-index: 100;
 }
 
 .wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 100vh;
-  width: max-content;
-  margin-top: 2vh;
-  border: solid rgba(255, 255, 255, 0.3);
-  background: transparent;
-  transform: scale(0.7);
-  cursor: default;
-  z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100vh;
+    width: max-content;
+    margin-top: 2vh;
+    border: solid rgba(255, 255, 255, 0.3);
+    background: transparent;
+    transform: scale(0.7);
+    cursor: default;
+    z-index: 100;
 }
 
 label {
-  background: transparent;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  font-size: 1.5rem;
-  color: hsl(0 0% 100% / 0.7);
-  padding: 0.8rem 2rem;
-  border-radius: 100vh;
-  cursor: pointer;
-  opacity: 1;
-  transition: background 0.5s ease-in-out, color 0.5s ease-in-out,
-    transform 0.2s ease;
+    background: transparent;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: hsl(0 0% 100% / 0.7);
+    padding: 0.8rem 2rem;
+    border-radius: 100vh;
+    cursor: pointer;
+    opacity: 1;
+    transition: background 0.5s ease-in-out, color 0.5s ease-in-out,
+        transform 0.2s ease;
 }
 
 label::before {
-  content: "";
-  position: absolute;
-  height: 0.25rem;
-  width: 50%;
-  opacity: 200;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%) scaleX(0);
-  border-radius: 100vh;
-  opacity: 1;
-  background: hsl(0 0% 100%);
-  box-shadow: 0 0 1.5rem 2px white, 0 4px 1rem 1px white;
-  transition: transform 0.3s ease;
-  backdrop-filter: blur(15px);
+    content: "";
+    position: absolute;
+    height: 0.25rem;
+    width: 50%;
+    opacity: 200;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) scaleX(0);
+    border-radius: 100vh;
+    opacity: 1;
+    background: hsl(0 0% 100%);
+    box-shadow: 0 0 1.5rem 2px white, 0 4px 1rem 1px white;
+    transition: transform 0.3s ease;
+    backdrop-filter: blur(15px);
 }
 
 input:checked + label::before {
-  transform: translateX(-50%) scaleX(1);
+    transform: translateX(-50%) scaleX(1);
 }
 
 input:checked + label {
-  background: hsl(195 4% 20% / 1);
-  color: hsl(0 0% 100%);
-  transform: scale(1.1);
+    background: hsl(195 4% 20% / 1);
+    color: hsl(0 0% 100%);
+    transform: scale(1.1);
 }
 
 label:nth-of-type(1)::before {
-  transform-origin: right;
+    transform-origin: right;
 }
 label:nth-of-type(2)::before {
-  transform-origin: left;
+    transform-origin: left;
 }
 
 #tabsHolder {
-  /* background: hsl(210, 9%, 0.6); */
-  backdrop-filter: blur(10px);
-  opacity: 1;
-  padding: 0.8rem 1.2rem;
-  border-radius: 120vh;
-  display: flex;
-  gap: 1.5rem;
-  scale: 1;
-  cursor: default;
-  z-index: 100;
+    /* background: hsl(210, 9%, 0.6); */
+    backdrop-filter: blur(10px);
+    opacity: 1;
+    padding: 0.8rem 1.2rem;
+    border-radius: 120vh;
+    display: flex;
+    gap: 1.5rem;
+    scale: 1;
+    cursor: default;
+    z-index: 100;
 }
 
 input {
-  display: none;
-  cursor: pointer;
-  opacity: 1;
-  /* backdrop-filter: blur(10px); */
+    display: none;
+    cursor: pointer;
+    opacity: 1;
+    /* backdrop-filter: blur(10px); */
 }
 
 /* end */
 
 .image-container {
-  position: relative;
-  display: inline-block;
-  width: 100%;
-  height: fit-content;
-  max-height: fit-content;
-  /* max-width: 400px; adjust this value as needed */
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    height: fit-content;
+    max-height: fit-content;
+    /* max-width: 400px; adjust this value as needed */
 }
 
 .image-container img {
-  display: block;
-  width: 100%;
-  height: auto;
-  border-radius: 25px;
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 25px;
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.848));
-  border-radius: 25px;
-  pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.848));
+    border-radius: 25px;
+    pointer-events: none;
 }
 
 /* scroll bar */
 
 ::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
+    width: 12px;
+    height: 12px;
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent;
+    background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #000000;
-  border-radius: 50px;
+    background: #000000;
+    border-radius: 50px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: transparent;
+    background: transparent;
 }
 
 html {
-  scrollbar-width: thin;
-  scrollbar-color: #ffffff5d transparent;
-  scroll-behavior: smooth;
+    scrollbar-width: thin;
+    scrollbar-color: #ffffff5d transparent;
+    scroll-behavior: smooth;
 }
 
 body {
-  -ms-overflow-style: -ms-autohiding-scrollbar;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 .scroller-container {
-  overflow: hidden;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .scroller-container2 {
-  overflow: hidden;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    overflow: hidden;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .scroller {
-  display: flex;
-  animation: scroll 30s linear infinite;
+    display: flex;
+    animation: scroll 30s linear infinite;
 }
 
 .scroller2 {
-  display: flex;
-  animation: scroll2 30s linear infinite;
+    display: flex;
+    animation: scroll2 30s linear infinite;
 }
 
 @keyframes scroll {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 @keyframes scroll2 {
-  0% {
-    transform: translateX(-100%);
-  }
-  100% {
-    transform: translateX(0%);
-  }
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
 }
 
 .tech-icon {
-  width: 3.7rem;
-  height: 3.7rem;
-  filter: grayscale(1);
-  margin: 0 1rem;
+    width: 3.7rem;
+    height: 3.7rem;
+    filter: grayscale(1);
+    margin: 0 1rem;
 }
 
 /* download resume button */
 .button {
-  --black-700: hsla(0 0% 12% / 1);
-  --border_radius: 9999px;
-  --transtion: 0.3s ease-in-out;
-  --offset: 2px;
+    --black-700: hsla(0 0% 12% / 1);
+    --border_radius: 9999px;
+    --transtion: 0.3s ease-in-out;
+    --offset: 2px;
 
-  scale: 0.9;
+    scale: 0.9;
 
-  cursor: pointer;
-  position: relative;
-  z-index: 0;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
 
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 
-  transform-origin: center;
+    transform-origin: center;
 
-  padding: 1rem;
-  background-color: transparent;
+    padding: 1rem;
+    background-color: transparent;
 
-  border: none;
-  border-radius: var(--border_radius);
-  transform: scale(calc(1 + (var(--active, 0) * 0.1)));
+    border: none;
+    border-radius: var(--border_radius);
+    transform: scale(calc(1 + (var(--active, 0) * 0.1)));
 
-  transition: transform var(--transtion);
+    transition: transform var(--transtion);
 }
 
 @media screen and (max-width: 600px) {
-  .button {
-    scale: 0.9;
-  }
+    .button {
+        scale: 0.9;
+    }
 }
 
 .button::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
-  width: 100%;
-  height: 100%;
-  background-color: var(--black-700);
+    width: 100%;
+    height: 100%;
+    background-color: var(--black-700);
 
-  border-radius: var(--border_radius);
-  box-shadow: inset 0 2px hsla(0, 1%, 29%, 0.674),
-    inset 0 -1px 2px 0 hsl(0, 0%, 0%),
-    0px 4px 10px -4px hsla(0 0% 0% / calc(1 - var(--active, 0))),
-    0 0 0 calc(var(--active, 0) * 0.375rem) hsl(0, 1%, 16%);
-  transition: all var(--transtion);
-  z-index: 0;
+    border-radius: var(--border_radius);
+    box-shadow: inset 0 2px hsla(0, 1%, 29%, 0.674),
+        inset 0 -1px 2px 0 hsl(0, 0%, 0%),
+        0px 4px 10px -4px hsla(0 0% 0% / calc(1 - var(--active, 0))),
+        0 0 0 calc(var(--active, 0) * 0.375rem) hsl(0, 1%, 16%);
+    transition: all var(--transtion);
+    z-index: 0;
 }
 
 .button::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
-  width: 100%;
-  height: 100%;
-  background-color: hsla(300, 1%, 13%, 0.75);
-  background-image: radial-gradient(
-      at 51% 89%,
-      rgba(255, 255, 255, 0.399) 0px,
-      transparent 50%
-    ),
-    radial-gradient(at 100% 100%, rgba(31, 31, 32, 0.819) 0px, transparent 50%),
-    radial-gradient(at 22% 91%, rgba(41, 39, 39, 0.752) 0px, transparent 50%);
-  background-position: top;
+    width: 100%;
+    height: 100%;
+    background-color: hsla(300, 1%, 13%, 0.75);
+    background-image: radial-gradient(
+            at 51% 89%,
+            rgba(255, 255, 255, 0.399) 0px,
+            transparent 50%
+        ),
+        radial-gradient(
+            at 100% 100%,
+            rgba(31, 31, 32, 0.819) 0px,
+            transparent 50%
+        ),
+        radial-gradient(
+            at 22% 91%,
+            rgba(41, 39, 39, 0.752) 0px,
+            transparent 50%
+        );
+    background-position: top;
 
-  opacity: var(--active, 0);
-  border-radius: var(--border_radius);
-  transition: opacity var(--transtion);
-  z-index: 2;
+    opacity: var(--active, 0);
+    border-radius: var(--border_radius);
+    transition: opacity var(--transtion);
+    z-index: 2;
 }
 
 .button:is(:hover, :focus-visible) {
-  --active: 1;
+    --active: 1;
 }
 .button:active {
-  transform: scale(1);
+    transform: scale(1);
 }
 
 .button .dots_border {
-  --size_border: calc(100% + 2px);
+    --size_border: calc(100% + 2px);
 
-  overflow: hidden;
+    overflow: hidden;
 
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
-  width: var(--size_border);
-  height: var(--size_border);
-  background-color: transparent;
+    width: var(--size_border);
+    height: var(--size_border);
+    background-color: transparent;
 
-  border-radius: var(--border_radius);
-  z-index: -10;
+    border-radius: var(--border_radius);
+    z-index: -10;
 }
 
 .button .dots_border::before {
-  content: "";
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transform-origin: left;
-  transform: rotate(0deg);
+    content: "";
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transform-origin: left;
+    transform: rotate(0deg);
 
-  width: 100%;
-  height: 2rem;
-  background-color: white;
+    width: 100%;
+    height: 2rem;
+    background-color: white;
 
-  mask: linear-gradient(transparent 0%, white 120%);
-  animation: rotate 2s linear infinite;
+    mask: linear-gradient(transparent 0%, white 120%);
+    animation: rotate 2s linear infinite;
 }
 
 @keyframes rotate {
-  to {
-    transform: rotate(360deg);
-  }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .button .sparkle {
-  position: relative;
-  z-index: 10;
+    position: relative;
+    z-index: 10;
 
-  width: 1.75rem;
+    width: 1.75rem;
 }
 
 .button .sparkle .path {
-  fill: currentColor;
-  stroke: currentColor;
+    fill: currentColor;
+    stroke: currentColor;
 
-  transform-origin: center;
+    transform-origin: center;
 
-  color: hsl(0, 0%, 100%);
+    color: hsl(0, 0%, 100%);
 }
 
 .button:is(:hover, :focus) .sparkle .path {
-  animation: path 1.5s linear 0.5s infinite;
+    animation: path 1.5s linear 0.5s infinite;
 }
 
 .button .sparkle .path:nth-child(1) {
-  --scale_path_1: 1.2;
+    --scale_path_1: 1.2;
 }
 .button .sparkle .path:nth-child(2) {
-  --scale_path_2: 1.2;
+    --scale_path_2: 1.2;
 }
 .button .sparkle .path:nth-child(3) {
-  --scale_path_3: 1.2;
+    --scale_path_3: 1.2;
 }
 
 @keyframes path {
-  0%,
-  34%,
-  71%,
-  100% {
-    transform: scale(1);
-  }
-  17% {
-    transform: scale(var(--scale_path_1, 1));
-  }
-  49% {
-    transform: scale(var(--scale_path_2, 1));
-  }
-  83% {
-    transform: scale(var(--scale_path_3, 1));
-  }
+    0%,
+    34%,
+    71%,
+    100% {
+        transform: scale(1);
+    }
+    17% {
+        transform: scale(var(--scale_path_1, 1));
+    }
+    49% {
+        transform: scale(var(--scale_path_2, 1));
+    }
+    83% {
+        transform: scale(var(--scale_path_3, 1));
+    }
 }
 
 .button .text_button {
-  position: relative;
-  z-index: 10;
+    position: relative;
+    z-index: 10;
 
-  background: transparent;
-  background-clip: text;
-  font-size: 1.2rem;
-  color: rgba(245, 245, 245, 0.807);
+    background: transparent;
+    background-clip: text;
+    font-size: 1.2rem;
+    color: rgba(245, 245, 245, 0.807);
 }
 
 /* contact me btn */
 
 .icon {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  fill: currentColor;
-  z-index: 0;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    fill: currentColor;
+    z-index: 0;
 }
 
 .contact-button {
-  position: relative;
-  -webkit-perspective: 1000;
-  -webkit-backface-visibility: hidden;
-  -webkit-transform: translate3d(0, 0, 0);
-  color: rgba(245, 245, 245, 0.807);
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 1.2em;
-  border: 2px solid rgba(141, 137, 137, 0.701);
-  border-radius: 15px;
-  padding: 10px 20px 10px 20px;
-  transition: 0.3s ease-in-out;
-  scale: 0.8;
+    position: relative;
+    -webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    color: rgba(245, 245, 245, 0.807);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 1.2em;
+    border: 2px solid rgba(141, 137, 137, 0.701);
+    border-radius: 15px;
+    padding: 10px 20px 10px 20px;
+    transition: 0.3s ease-in-out;
+    scale: 0.8;
 }
 
 .contact-button span {
-  text-transform: none;
-  font-weight: 600;
-  position: absolute;
-  color: #000000;
-  top: 10px;
-  left: 20px;
-  opacity: 0;
-  transition: all 0s ease 0s;
+    text-transform: none;
+    font-weight: 600;
+    position: absolute;
+    color: #000000;
+    top: 10px;
+    left: 20px;
+    opacity: 0;
+    transition: all 0s ease 0s;
 }
 
 .contact-button:hover {
-  transition: 0.3s ease-in-out;
-  border: 2px solid white;
-  border-radius: 50px;
-  background-color: white;
+    transition: 0.3s ease-in-out;
+    border: 2px solid white;
+    border-radius: 50px;
+    background-color: white;
 }
 
 .contact-button:hover > span {
-  opacity: 1;
-  transition: all 0.25s ease-in-out 0.1s;
+    opacity: 1;
+    transition: all 0.25s ease-in-out 0.1s;
 }
 
 .contact-button:hover:before {
-  transition: 0.3s ease-in-out;
-  background-color: #ee283e;
+    transition: 0.3s ease-in-out;
+    background-color: #ee283e;
 }
 
 .contact-button:before,
 .contact-button:after {
-  content: "";
-  position: absolute;
-  top: -14px;
-  left: -12px;
-  width: 132px;
-  height: 25px;
+    content: "";
+    position: absolute;
+    top: -14px;
+    left: -12px;
+    width: 132px;
+    height: 25px;
 }
 
 .contact-button:before {
-  border: 2px solid #ee283e;
-  background-color: rgb(46, 44, 44);
-  transform: skew(-25deg);
-  transition: 0.3s ease-in-out;
+    border: 2px solid #ee283e;
+    background-color: rgb(46, 44, 44);
+    transform: skew(-25deg);
+    transition: 0.3s ease-in-out;
 }
 
 .contact-button:after {
-  content: "Available for work";
-  font-size: 0.45em;
-  top: -7px;
-  left: 0px;
-  color: white;
+    content: "Available for work";
+    font-size: 0.45em;
+    top: -7px;
+    left: 0px;
+    color: white;
+}
+
+.send-button {
+    font-family: inherit;
+    font-size: 20px;
+    color: white;
+    padding: 0.7em 1em;
+    padding-left: 0.9em;
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 16px;
+    overflow: hidden;
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+.send-button span {
+    display: block;
+    margin-left: 0.3em;
+    transition: all 0.3s ease-in-out;
+}
+
+.send-button svg {
+    display: block;
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
+}
+
+.send-button:hover .svg-wrapper {
+    animation: fly-1 0.6s ease-in-out infinite alternate;
+}
+
+.send-button:hover svg {
+    transform: translateX(1.2em) rotate(45deg) scale(1.1);
+}
+
+.send-button:hover span {
+    transform: translateX(5em);
+}
+
+.send-button:active {
+    transform: scale(0.95);
+}
+
+@keyframes fly-1 {
+    from {
+        transform: translateY(0.1em);
+    }
+
+    to {
+        transform: translateY(-0.1em);
+    }
 }
